# pm-claude-skills

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  BRAIN.md  BRAIN_QUICKSTART.md  CHANGELOG.md  CHEATSHEET.md  COMMUNITY-SKILLS.md  CONTEXT.example.md  CONTRIBUTING.md  OPERATIONS.md  ORCHESTRATION.md  PERSONAS.md  README.md  ROADMAP.md  SECURITY.md  SKILL-AUTHORING-STANDARD.md  SKILLS.md  SPONSORS.md  TIERS.md  WORKFLOWS.md  glama.json  history.json  package.json  server.json  skill-sources.json  skill-tiers.json  smithery.yaml  vercel.json  workflows.json
.claude-plugin/: marketplace.json
action/: README.md
cockpit/: package-lock.json
commands/: README.md  brain.md  close-the-quarter.md  launch-a-product.md  red-team.md  rescue-an-account.md  run-discovery.md  setup-context.md  setup-pm-skills.md  ship-a-feature.md
community/: README.md  registry.json
config/: scheduled-reports.json
conformance/: README.md  tasks.json  verify.mjs
connectors/: README.md  composio.md  lovable.md  mcp-pairings.md  mcp.example.json  n8n-example-workflow.json  n8n.md  obsidian.md  openclaw.md
data/: outcomes.json  skill-requests.json
dataset/: CARD.md  routing.jsonl  samples.jsonl  sft-seeds.jsonl
docs/: CREATORS.md  FOUNDATION.md  SAVE-TOKENS.md  SHOWCASE.md  SPONSORSHIP.md  anthropic-directory-submission.md  concepts.md  launch-posts.md  submission-kit.md
evals/: README.md  cases.json  results.json  run-evals.mjs
exports/: README.md
extension/: README.md  content.css  content.js  (+5 more)
python/: README.md  pyproject.toml
python/pm_skills/: skills.json
(+5229 files in other folders)
